--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name = "athor" content="alir">
-    <meta name = "descroption" content="littil rock paper scissore game">
+    <meta name = "descroption" content="littil rock paper scissore game.">
     <title>rock paper scissore game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/download (1).png" >
